// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`About Page Renders properly 1`] = `
<div>
  <div
    className="container-fluid"
  >
    <div
      className="row"
    >
      <div
        className="col"
      >
        <h2
          id="aboutTitle"
        >
          About us
        </h2>
        <p
          id="about-paragraph"
        >
          
        </p>
        <hr
          style={
            Object {
              "marginTop": "100px",
              "width": "1300px",
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="container-fluid"
  >
    <div
      className="row"
    >
      <div
        className="col"
      >
        <img
          alt="charis"
          id="mainFrame"
          src="http://54.66.121.53:1337"
        />
        <h5
          id="heavyHeader"
        >
          
        </h5>
        <p
          id="lightHeader"
        >
          
        </p>
        <p
          id="big-description"
        >
          
          <strong>
            <blockquote />
          </strong>
          <p
            id="clientMessage"
          >
            
          </p>
          <br />
          
          <br />
          <br />
        </p>
      </div>
    </div>
  </div>
  <div>
    <div
      className="bottom-padding teamSectionStyle container-margin-position container-fluid"
    >
      <div
        className="row"
      >
        <div
          className="col-sm-4"
          id="team-column-padding"
        >
          <img
            alt="about dan"
            id="emp-frame"
            src="http://54.66.121.53:1337"
          />
          <h4
            id="name"
          >
             
            
             
          </h4>
          <h4
            id="role"
          >
             
            
             
          </h4>
          <p
            id="team-description"
          >
            
          </p>
          <a
            href="https://designcabin.co.nz"
          >
            designcabin.co.nz
          </a>
        </div>
        <div
          className="col-sm-4"
          id="team-column-padding"
        >
          <img
            alt="about walter"
            id="emp-frame"
            src="http://54.66.121.53:1337"
          />
          <h4
            id="name"
          >
            
          </h4>
          <h4
            id="role"
          >
            
          </h4>
          <p
            id="team-description"
          >
            
          </p>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-sm-4"
          id="team-column-padding"
        >
          <img
            alt="about dan"
            id="emp-frame"
            src="http://54.66.121.53:1337"
          />
          <h4
            id="name"
          >
            
          </h4>
          <h4
            id="role"
          >
            
          </h4>
          <p
            id="team-description"
          >
            
          </p>
          <a
            href="https://wordsforwellness.com"
          >
            wordsforwellness.com
          </a>
        </div>
        <div
          className="col-sm-4"
          id="team-column-padding"
        >
          <img
            alt="about dan"
            id="emp-frame"
            src="http://54.66.121.53:1337"
          />
          <h4
            id="name"
          >
            
          </h4>
          <h4
            id="role"
          >
            
          </h4>
          <p
            id="team-description"
          >
            
          </p>
          <a
            href="https://gardyneholt.co.nz"
          >
            gardyneholt.co.nz
          </a>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-sm-4"
          id="team-column-padding"
        >
          <img
            alt="about dan"
            id="emp-frame"
            src="http://54.66.121.53:1337"
          />
          <h4
            id="name"
          >
            
          </h4>
          <h4
            id="role"
          >
            
          </h4>
          <p
            id="team-description"
          >
            
          </p>
          <a
            href="https://silverlane.agency"
          >
            silverlane.agency
          </a>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="ctaStyle"
    >
      <div
        className="ctaStyle-text container"
      >
        <div
          className="row"
        >
          <h1
            id="ctaTitle"
          >
            
          </h1>
        </div>
        <div
          className="row"
        >
          <p
            id="ctaDesc"
          >
            
          </p>
        </div>
        <div
          className="row"
        >
          <a
            href="/register"
            onClick={[Function]}
          >
            <button
              className="primaryCustomButtonStyle btn btn-primary"
              disabled={false}
              id="ctaButton"
              type="button"
            >
              Join Us Now
            </button>
          </a>
        </div>
      </div>
    </div>
    <div
      id="signUpContainer"
    >
      <div
        className="container"
      >
        <div
          className="row"
        >
          <div
            className="col-sm-6"
          >
            <p
              id="ctaSignUp"
            >
              Sign up for We are Us news and special offers.
            </p>
          </div>
          <div
            className="col-sm-6"
          >
            <div
              className="mb-3 input-group"
            >
              <input
                className="form-control"
                id="ctaSignUpForm"
                placeholder="Enter your email"
                type="text"
              />
              <div
                className="input-group-append"
              >
                <button
                  className="btn btn-light"
                  disabled={false}
                  id="ctaSignUpFormSubmit"
                  type="button"
                >
                  <img
                    alt="Submit Button"
                    src={
                      Object {
                        "ReactComponent": Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "render": [Function],
                        },
                        "__esModule": true,
                        "default": "subscribe_enter_arrow.svg",
                      }
                    }
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Contact Renders properly 1`] = `
<div>
  <div
    className="contactUsPage"
  >
    <p
      className="contactCTA"
    >
       
      <strong>
         
        
      </strong>
       
    </p>
    <p
      className="contactText"
    >
       
      
    </p>
  </div>
</div>
`;

exports[`For-Practitioners Page Renders properly 1`] = `
<div>
  <div
    className="contactUsPage"
  >
    <p
      className="contactCTA"
    >
       
      <strong>
         
        
      </strong>
       
    </p>
    <p
      className="contactText"
    >
       
      
    </p>
  </div>
</div>
`;

exports[`Practitioner List Page Renders properly 1`] = `
<div
  className="practitionerList mt-5"
>
  <div
    className="pracContainerStyle container-fluid"
    style={
      Object {
        "backgroundColor": "white",
      }
    }
  >
    <div
      className="pracListStyle container"
    >
      <h4>
        Practitioners
      </h4>
      <div
        className="pracListDeckStyle card-deck"
      >
        <div
          className="row"
        />
      </div>
      <br />
    </div>
  </div>
  <div>
    <div
      className="ctaStyle"
    >
      <div
        className="ctaStyle-text container"
      >
        <div
          className="row"
        >
          <h1
            id="ctaTitle"
          >
            
          </h1>
        </div>
        <div
          className="row"
        >
          <p
            id="ctaDesc"
          >
            
          </p>
        </div>
        <div
          className="row"
        >
          <a
            href="/register"
            onClick={[Function]}
          >
            <button
              className="primaryCustomButtonStyle btn btn-primary"
              disabled={false}
              id="ctaButton"
              type="button"
            >
              Join Us Now
            </button>
          </a>
        </div>
      </div>
    </div>
    <div
      id="signUpContainer"
    >
      <div
        className="container"
      >
        <div
          className="row"
        >
          <div
            className="col-sm-6"
          >
            <p
              id="ctaSignUp"
            >
              Sign up for We are Us news and special offers.
            </p>
          </div>
          <div
            className="col-sm-6"
          >
            <div
              className="mb-3 input-group"
            >
              <input
                className="form-control"
                id="ctaSignUpForm"
                placeholder="Enter your email"
                type="text"
              />
              <div
                className="input-group-append"
              >
                <button
                  className="btn btn-light"
                  disabled={false}
                  id="ctaSignUpFormSubmit"
                  type="button"
                >
                  <img
                    alt="Submit Button"
                    src={
                      Object {
                        "ReactComponent": Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "render": [Function],
                        },
                        "__esModule": true,
                        "default": "subscribe_enter_arrow.svg",
                      }
                    }
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Practitioner Profile Renders properly 1`] = `
<div
  className="practitionerPage"
>
  <div>
    <div
      autoPlay={true}
      className="pracPersonalCarousel carousel slide"
      onKeyDown={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
    >
      <ol
        className="carousel-indicators"
      >
        <li
          className="active"
          onClick={[Function]}
        />
        <li
          onClick={[Function]}
        />
        <li
          onClick={[Function]}
        />
      </ol>
      <div
        className="carousel-inner"
      >
        <div
          className="active carousel-item"
        >
          <img
            alt="First slide"
            className="carousel-img-margin"
            src="prac_image_carousel_placeholder.jpg"
          />
        </div>
        <div
          className="carousel-item"
        >
          <img
            alt="second slide"
            className="carousel-img-margin"
            src="prac_image_carousel_placeholder.jpg"
          />
        </div>
        <div
          className="carousel-item"
        >
          <img
            alt="third slide"
            className="carousel-img-margin"
            src="prac_image_carousel_placeholder.jpg"
          />
        </div>
      </div>
      <a
        className="carousel-control-prev"
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
      >
        <span
          aria-hidden="true"
          className="carousel-control-prev-icon"
        />
        <span
          className="sr-only"
        >
          Previous
        </span>
      </a>
      <a
        className="carousel-control-next"
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
      >
        <span
          aria-hidden="true"
          className="carousel-control-next-icon"
        />
        <span
          className="sr-only"
        >
          Next
        </span>
      </a>
    </div>
  </div>
  <div
    className="container-dimensions container-fluid"
  >
    <div
      className="row"
    >
      <div
        className="no-padding col-lg-8"
      >
        <img
          alt="practitioner-profile"
          id="profile-image-frame"
          src="prac_profile_placeholder.jpg"
        />
        <h2
          className="practitioner-title"
          id="practitioner-name"
        >
          
          <img
            alt="logo"
            className="practitioner-logo"
            src="prac_logo_placeholder.jpg"
          />
        </h2>
        <div
          id="category"
        >
          <span
            id="category-text"
          />
        </div>
        <div
          id="location"
        >
          <span
            id="suburb-profile"
          >
            
            ,
          </span>
          <span
            id="city-profile"
          >
             
            
          </span>
        </div>
        <br />
        <h5
          className="practitioner-name"
          id="person-name"
        >
           
        </h5>
      </div>
      <div
        className="contact-card-column col-lg-4"
      >
        <div
          className="contact-card-box card"
        >
          <div
            className="card-body"
          >
            <div
              className="card-title h5"
            >
              Contact Details
            </div>
            <div
              className="card-subtitle h6"
            >
              
            </div>
            <p
              className="card-text"
            >
              
              <br />
              
              <span
                className="horizontal-line-card"
              />
              <a
                href="/#"
                id="purple-card-heading"
              >
                
                 (0)
                
                 
                
                 
                
              </a>
              <span
                className="horizontal-line-card"
              />
              <a
                href="/#"
                id="purple-card-heading"
              >
                
              </a>
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="no-padding col-lg-8"
      >
        <div
          className="practitioner-description-card card"
        >
          <div
            className="card-body"
          >
            <div
              className="card-title h5"
            >
              About
            </div>
            <p
              className="card-text"
            >
              <span
                className="inner"
                style={
                  Object {
                    "maxHeight": 500,
                  }
                }
              >
                <p
                  id="description-text"
                >
                  
                   
                </p>
              </span>
            </p>
          </div>
        </div>
        <div
          className="accordion-section container-fluid"
        >
          <div
            className="accordion"
            defaultationkey="0"
          >
            <div
              className="card"
            >
              <div
                className="card-header"
                onClick={[Function]}
              >
                Specialties
                <img
                  alt="accordion_arrow"
                  className="arrow-position"
                  src="accordion_arrow.svg"
                />
              </div>
              <div
                aria-expanded={null}
                className="collapse"
              >
                <div
                  className="card-body"
                >
                  <ul
                    className="accordion-content-list-style"
                  />
                </div>
              </div>
            </div>
            <div
              className="card"
            >
              <div
                className="card-header"
                onClick={[Function]}
              >
                Services
                <img
                  alt="accordion_arrow"
                  className="arrow-position"
                  src="accordion_arrow.svg"
                />
              </div>
              <div
                aria-expanded={null}
                className="collapse"
              >
                <div
                  className="card-body"
                >
                  <ul
                    className="accordion-content-list-style"
                    id="services"
                  />
                </div>
              </div>
            </div>
            <div
              className="card"
            >
              <div
                className="card-header"
                onClick={[Function]}
              >
                Training, Qualifications & Memberships
                <img
                  alt="accordion_arrow"
                  className="arrow-position"
                  src="accordion_arrow.svg"
                />
              </div>
              <div
                aria-expanded={null}
                className="collapse"
              >
                <div
                  className="card-body"
                >
                  <h6
                    className="title-header"
                  >
                    <img
                      alt="accordion_diploma"
                      src="icon_diploma.svg"
                      style={
                        Object {
                          "paddingRight": "5px",
                        }
                      }
                    />
                    Diplomas
                  </h6>
                  <div
                    className="font-body"
                    id="education"
                  >
                    <ul
                      className="training-accordion-body-font"
                    />
                  </div>
                  <br />
                  <h6
                    className="title-header"
                  >
                    <img
                      alt="accordion_certificate"
                      src="icon_certificate.svg"
                      style={
                        Object {
                          "paddingRight": "5px",
                        }
                      }
                    />
                    Certificates
                  </h6>
                  <ul
                    className="training-accordion-body-font"
                  />
                  <br />
                  <h6
                    className="title-header"
                  >
                    <img
                      alt="accordion_memberships"
                      src="icon_memberships.svg"
                      style={
                        Object {
                          "paddingRight": "5px",
                        }
                      }
                    />
                    Memberships
                  </h6>
                  <div
                    className="font-body"
                    id="memberships"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="ctaStyle"
    >
      <div
        className="ctaStyle-text container"
      >
        <div
          className="row"
        >
          <h1
            id="ctaTitle"
          >
            
          </h1>
        </div>
        <div
          className="row"
        >
          <p
            id="ctaDesc"
          >
            
          </p>
        </div>
        <div
          className="row"
        >
          <a
            href="/register"
            onClick={[Function]}
          >
            <button
              className="primaryCustomButtonStyle btn btn-primary"
              disabled={false}
              id="ctaButton"
              type="button"
            >
              Join Us Now
            </button>
          </a>
        </div>
      </div>
    </div>
    <div
      id="signUpContainer"
    >
      <div
        className="container"
      >
        <div
          className="row"
        >
          <div
            className="col-sm-6"
          >
            <p
              id="ctaSignUp"
            >
              Sign up for We are Us news and special offers.
            </p>
          </div>
          <div
            className="col-sm-6"
          >
            <div
              className="mb-3 input-group"
            >
              <input
                className="form-control"
                id="ctaSignUpForm"
                placeholder="Enter your email"
                type="text"
              />
              <div
                className="input-group-append"
              >
                <button
                  className="btn btn-light"
                  disabled={false}
                  id="ctaSignUpFormSubmit"
                  type="button"
                >
                  <img
                    alt="Submit Button"
                    src={
                      Object {
                        "ReactComponent": Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "render": [Function],
                        },
                        "__esModule": true,
                        "default": "subscribe_enter_arrow.svg",
                      }
                    }
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
